# boggler

./: Cargo.toml  build.rs  grid.txt
src/: board.rs  main.rs
